# package-manager

./: .gitignore  README.md  build_flatpak.sh  dev.rotstein.packagemanager.json  meson.build
src/: main.cpp  meson.build
